objects/Related_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current account the user clicked from</description>
        <inlineHelpText>Current account the user clicked from</inlineHelpText>
        <label>Current</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts (Current)</relationshipLabel>
        <relationshipName>Related_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Placeholder</description>
        <inlineHelpText>Placeholder</inlineHelpText>
        <label>Placeholder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts (Placeholder)</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to</description>
        <inlineHelpText>Account related to</inlineHelpText>
        <label>Related To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts (Related To)</relationshipLabel>
        <relationshipName>Related_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation_Detail__c</fullName>
        <description>Quick summary of how the accounts are related to each other</description>
        <inlineHelpText>Quick summary of how the accounts are related to each other</inlineHelpText>
        <label>Relation Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <description>Picklist for relationship type between Accounts</description>
        <inlineHelpText>Picklist for relationship type between Accounts</inlineHelpText>
        <label>Relation Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owners are friends</fullName>
                </value>
                <value>
                    <fullName>Financial partners</fullName>
                </value>
                <value>
                    <fullName>College buddies</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Accounts related to each other</description>
    <label>Related Accounts</label>
    <nameField>
        <displayFormat>Relation-{0000}</displayFormat>
        <label>Relation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>